syntax = "proto3";

package api;
option go_package = ".;api";

message CreateI {
  string name = 1;
}

message CreateO {
  string message = 1;
}
