syntax = "proto3";

package api;

option go_package = "gen/api";

message DeleteI {
  string name = 1;
}

message DeleteO {
  string message = 1;
}
