syntax = "proto3";

package api;

option go_package = "gen/api";

message SearchI {
  string name = 1;
}

message SearchO {
  string message = 1;
}
