syntax = "proto3";

package api;

option go_package = "gen/api";

message UpdateI {
  string name = 1;
}

message UpdateO {
  string message = 1;
}
